...
                                child: Padding(
                                  padding: const EdgeInsetsDirectional.fromSTEB(
                                      8.0, 0.0, 8.0, 0.0),
                                  child: SizedBox(
                                    width: 300.0,
                                    child: TextFormField(
                                      key: const ValueKey('lastname_9toe'),
                                      controller: _model.lastnameController,
                                      focusNode: _model.lastnameFocusNode,
                                      obscureText: false,
                                      decoration: InputDecoration(
                                        labelText: 'Nom',
                                        labelStyle: FlutterFlowTheme.of(context)
...
                              child: Padding(
                                padding: const EdgeInsetsDirectional.fromSTEB(
                                    8.0, 0.0, 8.0, 0.0),
                                child: SizedBox(
                                  width: 300.0,
                                  child: TextFormField(
                                    key: const ValueKey('firstname_fcye'),
                                    controller: _model.firstnameController,
                                    focusNode: _model.firstnameFocusNode,
                                    obscureText: false,
                                    decoration: InputDecoration(
                                      labelText: 'Prénom',
                                      labelStyle: FlutterFlowTheme.of(context)
...
                              child: Padding(
                                padding: const EdgeInsetsDirectional.fromSTEB(
                                    8.0, 0.0, 8.0, 0.0),
                                child: SizedBox(
                                  width: 300.0,
                                  child: TextFormField(
                                    key: const ValueKey('email_9a72'),
                                    controller: _model.emailController,
                                    focusNode: _model.emailFocusNode,
                                    obscureText: false,
                                    decoration: InputDecoration(
                                      labelText: 'Email',
                                      labelStyle: FlutterFlowTheme.of(context)
...
                              child: Padding(
                                padding: const EdgeInsetsDirectional.fromSTEB(
                                    8.0, 0.0, 8.0, 0.0),
                                child: SizedBox(
                                  width: 300.0,
                                  child: TextFormField(
                                    key: const ValueKey('password_ds89'),
                                    controller: _model.passwordController,
                                    focusNode: _model.passwordFocusNode,
                                    obscureText: !_model.passwordVisibility,
                                    decoration: InputDecoration(
                                      labelText: 'Mot de passe',
                                      labelStyle: FlutterFlowTheme.of(context)
...
                                  ),
                                ),
                                unselectedWidgetColor:
                                    FlutterFlowTheme.of(context).secondaryText,
                              ),
                              child: Checkbox(
                                key: const ValueKey('optin_v7sj'),
                                value: _model.optinValue ??= false,
                                onChanged: (newValue) async {
                                  setState(() => _model.optinValue = newValue!);
                                },
                                activeColor:
                                    FlutterFlowTheme.of(context).secondary,
...
                          mainAxisAlignment: MainAxisAlignment.center,
                          children: [
                            Padding(
                              padding: const EdgeInsetsDirectional.fromSTEB(
                                  0.0, 15.0, 0.0, 15.0),
                              child: FFButtonWidget(
                                key: const ValueKey('Button_3aqs'),
                                onPressed: () async {
                                  if (_model.optinValue == true) {
                                    GoRouter.of(context).prepareAuthEvent();

                                    final user = await authManager
                                        .createAccountWithEmail(
...
