...
                ),
              ),
              wrapWithModel(
                model: _model.titleModel,
                updateCallback: () => setState(() {}),
                child: const TitleWidget(
                  title: 'Profil',
                ),
              ),
              Container(
                width: 360.0,
                decoration: BoxDecoration(
                  color: FlutterFlowTheme.of(context).primaryBackground,
...
                            await authManager.signOut();
                            GoRouter.of(context).clearRedirectLocation();

                            context.pushNamedAuth('signin', context.mounted);
                          },
                          child: Text(
                            key: const ValueKey('Text_86al'),
                            'Se déconnecter',
                            style: FlutterFlowTheme.of(context).labelSmall,
                          ),
                        ),
                        Text(
                          ' - ',
...
